[package]
authors = ["AdrianRaFo-P"]
name = "cortex-app"
edition = "2024"
version = "0.1.0"

[[bin]]
name = "bitfield"
path = "src/bin/bitfield.rs"
test = false
bench = false

[[bin]]
name = "format"
path = "src/bin/format.rs"
test = false
bench = false

[[bin]]
name = "hello"
path = "src/bin/hello.rs"
test = false
bench = false

[[bin]]
name = "levels"
path = "src/bin/levels.rs"
test = false
bench = false

[[bin]]
name = "overflow"
path = "src/bin/overflow.rs"
test = false
bench = false

[[bin]]
name = "panic"
path = "src/bin/panic.rs"
test = false
bench = false

[lib]
harness = false
test = false
bench = false

# needed for each integration test
[[test]]
name = "integration"
harness = false

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
cortex-m-semihosting = "0.5.0"
defmt = "1.0.1"
defmt-rtt = "1.1.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
semihosting = "0.1.20"
stm32f30x-hal= "0.2.0"

[dev-dependencies]
defmt-test = "0.4.0"

# cargo build/run
[profile.dev]
# default is opt-level = '0', but that makes very
# verbose machine code
opt-level = 's'
# trade compile speed for slightly better optimizations
codegen-units = 1

# cargo build/run --release
[profile.release]
# default is opt-level = '3', but that makes quite
# verbose machine code
opt-level = 's'
# trade compile speed for slightly better optimizations
codegen-units = 1
# Use Link Time Optimizations to further inline things across
# crates
lto = 'fat'
# Leave the debug symbols in (default is no debug info)
debug = 2
